# avatar

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  config.example.yaml  docker-compose.example.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  release.yaml
avatar/: __init__.py  app.py  cli.py  config.py
avatar/core/: __init__.py  model.py  pipeline.py  platform.py  policy.py  registry.py  security.py  store.py  trigger.py  types.py
avatar/models/: __init__.py  anthropic.py  gemini.py  ollama.py  openai.py
avatar/obs/: __init__.py  health.py  logging.py  metrics.py  tracing.py
avatar/security/: __init__.py  http_scanner.py
avatar/store/: __init__.py  memory.py  sqlite.py
avatar/triggers/: __init__.py  mention.py  schedule.py
deploy/: prometheus.yml
deploy/grafana/: dashboard.json
tests/: contract.py  fakes.py  test_anthropic.py  test_bluesky.py  test_config.py  test_contract_fakes.py  test_gemini.py  test_http_scanner.py  test_ollama.py  test_openai.py  test_pipeline.py  test_policy.py  test_store.py  test_threads.py  test_triggers.py  test_x.py
