[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avatar-bot"
version = "0.1.0"
description = "A lightweight, self-hosted, trigger-based social media bot with pluggable platforms, LLM providers and security hooks."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Thomas Sprock" }]
keywords = ["social-media", "bot", "llm", "bluesky", "mastodon", "automation"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "typer>=0.12",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "croniter>=2.0",
    "jinja2>=3.1",
    "jmespath>=1.0",
    "regex>=2024.4",
    "prometheus-client>=0.20",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
# Provider SDKs are optional extras so a minimal image only ships what it uses.
anthropic = ["anthropic>=0.49"]
openai = ["openai>=1.30"]
gemini = ["google-genai>=1.0"]
# ollama uses plain httpx, no extra needed.
platforms = ["atproto>=0.0.55", "tweepy>=4.14"]
otel = [
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
    "opentelemetry-instrumentation-httpx>=0.46b0",
]
all = [
    "avatar-bot[anthropic,openai,gemini,platforms,otel]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
    "types-jmespath",
]

[project.scripts]
avatar = "avatar.cli:app"

[project.urls]
Homepage = "https://github.com/t11z/avatar"
Repository = "https://github.com/t11z/avatar"
Issues = "https://github.com/t11z/avatar/issues"

[tool.hatch.build.targets.wheel]
packages = ["avatar"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["B008"]  # typer uses function calls as defaults

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
